fix register errors msg issue, test token correct implementation [access, refresh]

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,10 @@ img {
 .error{
   color: var(--danger-color);
 }
+.error-msg{
+  color: var(--danger-color);
 
+}
 /* Padding */
 .p {
   padding: 0.5rem;
